# PyCorewar

./: .flake8  .gitignore  INSTALL  pyproject.toml  setup.py
.devcontainer/: README.md  devcontainer.json  docker-compose.yml  requirements-dev.txt  setup.sh  xwindisp_2x_scaling.patch
Benchmarks/: benchmark
Test/: MARS88.py  run.sh
corewar/: __init__.py
corewar/old/: __init__.py  benchmark
examples/: core_visualizer.py  pymars  simple_visualizer.py
examples/tmp/: hillcompare  mars_94nop_check  mars_94nop_compare
